--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyA0ZAkcVa19_5PZSsP2GFTIPXUOxHMYVyo"/>
+
         <activity
             android:name=".activity.SplashActivity"
             android:theme="@style/SplashTheme">
