--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,7 +52,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.EventCreateActivity">
+        <activity android:name=".activity.EventCreateActivity"
+            android:label="@string/title_activity_event_create">
+            <!--android:theme="@style/AppTheme.NoActionBar"-->
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
