--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-auth:10.2.1'
     compile 'com.satsuware.lib:usefulviews:2.3.6'
     compile 'com.facebook.android:facebook-android-sdk:4.+'
+    compile 'com.scalified:fab:1.1.3'
     testCompile 'junit:junit:4.12'
 }
 
