--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     compile 'com.android.support:design:25.0.0'
     compile 'com.android.support:recyclerview-v7:25.0.0'
     compile 'com.google.android.gms:play-services-maps:10.2.1'
+    compile 'com.google.android.gms:play-services-places:10.2.1'
     compile 'com.google.android.gms:play-services-auth:10.2.1'
     compile 'com.satsuware.lib:usefulviews:2.3.6'
     compile 'com.facebook.android:facebook-android-sdk:4.+'
