--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-maps:10.2.1'
     compile 'com.google.android.gms:play-services-places:10.2.1'
     compile 'com.google.android.gms:play-services-auth:10.2.1'
+    compile 'com.google.android.gms:play-services-location:10.2.1'
     compile 'com.satsuware.lib:usefulviews:2.3.6'
     compile 'com.facebook.android:facebook-android-sdk:4.+'
     compile 'com.scalified:fab:1.1.3'
