--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,7 +64,7 @@ dependencies {
     }
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.ogaclejapan.arclayout:library:1.1.0@aar'
-
+    compile "com.android.support:support-v4:25.0.+"
 
     testCompile 'junit:junit:4.12'
 }
