--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,8 @@
     package="com.moscowmuleaddicted.neighborhoodsecurity">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -38,9 +37,7 @@
         <activity android:name=".activity.MapActivity" />
         <activity
             android:name=".activity.TestRestAPI"
-            android:theme="@style/AppTheme.NoActionBar">
-
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
 
         <service android:name=".services.MyFirebaseInstanceIDService">
             <intent-filter>
@@ -56,15 +53,11 @@
         <activity
             android:name=".activity.EventDetailActivity"
             android:label="@string/title_activity_event_detail"
-            android:theme="@style/AppTheme.NoActionBar">
-
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity android:name=".activity.EmailPasswordActivity" />
         <activity
             android:name=".activity.AuthenticationActivity"
-            android:label="@string/title_authentication">
-
-        </activity>
+            android:label="@string/title_authentication"></activity>
         <activity
             android:name="com.facebook.CustomTabActivity"
             android:exported="true">
@@ -83,20 +76,16 @@
 
             <!-- android:theme="@style/AppTheme.NoActionBar" -->
 
-
         </activity>
         <activity
             android:name=".activity.EventListActivity"
-            android:label="@string/title_activity_event_list">
-
-        </activity>
+            android:label="@string/title_activity_event_list"></activity>
         <activity
             android:name=".activity.SubscriptionCreateActivity"
-            android:label="@string/title_activity_subscription_create">
-        </activity>
-        <activity android:name=".activity.SubscriptionListActivity"
-            android:label="@string/title_activity_subscription_list">
-        </activity>
+            android:label="@string/title_activity_subscription_create"></activity>
+        <activity
+            android:name=".activity.SubscriptionListActivity"
+            android:label="@string/title_activity_subscription_list"></activity>
     </application>
 
 </manifest>
