--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion "25.0.3"
 
     defaultConfig {
-        applicationId "com.moscowmuleaddicted.neighborhoodsecuritywear"
+        applicationId "com.moscowmuleaddicted.neighborhoodsecurity"
         minSdkVersion 21
         targetSdkVersion 25
         versionCode 1
@@ -23,6 +23,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.google.android.support:wearable:2.0.2'
-    provided 'com.google.android.wearable:wearable:2.0.2'
     compile 'com.google.android.gms:play-services-wearable:10.2.6'
+    compile 'com.google.android.gms:play-services-maps:10.2.6'
+    provided 'com.google.android.wearable:wearable:2.0.2'
 }
