--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.ogaclejapan.arclayout:library:1.1.0@aar'
     compile "com.android.support:support-v4:25.0.+"
+    compile 'com.google.maps.android:android-maps-utils:0.5+'
 
     testCompile 'junit:junit:4.12'
 }
