--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
     package="com.moscowmuleaddicted.neighborhoodsecurity">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
 
     <application
@@ -35,7 +35,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.HomePage" />
-        <activity android:name=".activity.MapActivity" />
+        <activity
+            android:name=".activity.MapActivity"
+            android:label="@string/title_activity_map">
+        </activity>
         <activity
             android:name=".activity.TestRestAPI"
             android:theme="@style/AppTheme.NoActionBar">
@@ -92,11 +95,10 @@
         </activity>
         <activity
             android:name=".activity.SubscriptionCreateActivity"
-            android:label="@string/title_activity_subscription_create">
-        </activity>
-        <activity android:name=".activity.SubscriptionListActivity"
-            android:label="@string/title_activity_subscription_list">
-        </activity>
+            android:label="@string/title_activity_subscription_create"></activity>
+        <activity
+            android:name=".activity.SubscriptionListActivity"
+            android:label="@string/title_activity_subscription_list"></activity>
     </application>
 
 </manifest>
