--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,8 @@ dependencies {
     compile 'com.ogaclejapan.arclayout:library:1.1.0@aar'
     compile "com.android.support:support-v4:25.0.+"
     compile 'com.google.maps.android:android-maps-utils:0.5+'
+    compile 'com.firebase:firebase-jobdispatcher:0.6.0'
+
 
     testCompile 'junit:junit:4.12'
 }
