--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,14 +60,13 @@ dependencies {
     compile 'com.scalified:fab:1.1.3'
     compile('com.mikepenz:materialdrawer:5.9.1@aar') {
         transitive = true
-
     }
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.ogaclejapan.arclayout:library:1.1.0@aar'
     compile "com.android.support:support-v4:25.0.+"
     compile 'com.google.maps.android:android-maps-utils:0.5+'
     compile 'com.firebase:firebase-jobdispatcher:0.6.0'
-
+    compile 'com.github.faruktoptas:FancyShowCaseView:0.1.1'
 
     testCompile 'junit:junit:4.12'
 }
