--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <!-- METADATA -->
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
@@ -20,30 +26,7 @@
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
 
-        <!-- The API key for Google Maps-based APIs. -->
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key" />
-
-        <activity
-            android:name=".activity.SplashActivity"
-            android:theme="@style/SplashTheme">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity android:name=".activity.HomePage" />
-        <activity
-            android:name=".activity.MapActivity"
-            android:label="@string/title_activity_map">
-        </activity>
-        <activity
-            android:name=".activity.TestRestAPI"
-            android:theme="@style/AppTheme.NoActionBar">
-
-        </activity>
+        <!-- SERVICES -->
 
         <service android:name=".services.FCMTokenRefreshService">
             <intent-filter>
@@ -62,49 +45,73 @@
             </intent-filter>
         </service>
 
+        <!-- ACTIVITIES -->
+
+        <activity
+            android:name=".activity.SplashActivity"
+            android:theme="@style/SplashTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".activity.HomePage"
+            android:label="@string/app_name">
+        </activity>
+
+
+        <activity
+            android:name=".activity.MapActivity"
+            android:label="@string/title_activity_map">
+        </activity>
+
         <activity
             android:name=".activity.EventDetailActivity"
             android:label="@string/title_activity_event_detail"
             android:theme="@style/AppTheme.NoActionBar">
-
         </activity>
-        <activity android:name=".activity.EmailPasswordActivity" />
+
+        <activity android:name=".activity.EmailPasswordActivity"
+            android:label="@string/title_activity_auth_email"/>
+
         <activity
             android:name=".activity.AuthenticationActivity"
             android:label="@string/title_authentication">
-
         </activity>
+
         <activity
             android:name="com.facebook.CustomTabActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
-
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".activity.EventCreateActivity"
             android:label="@string/title_activity_event_create">
-
-            <!-- android:theme="@style/AppTheme.NoActionBar" -->
-
-
         </activity>
+
         <activity
             android:name=".activity.EventListActivity"
             android:label="@string/title_activity_event_list">
-
         </activity>
+
         <activity
             android:name=".activity.SubscriptionCreateActivity"
-            android:label="@string/title_activity_subscription_create"></activity>
+            android:label="@string/title_activity_subscription_create">
+        </activity>
+
         <activity
             android:name=".activity.SubscriptionListActivity"
-            android:label="@string/title_activity_subscription_list"></activity>
+            android:label="@string/title_activity_subscription_list">
+        </activity>
+
     </application>
 
 </manifest>
