--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,9 @@ dependencies {
     compile 'com.ogaclejapan.arclayout:library:1.1.0@aar'
     compile 'com.github.faruktoptas:FancyShowCaseView:0.1.1'
 
+    compile 'com.twitter.sdk.android:twitter-core:3.0.0'
+    compile 'com.twitter.sdk.android:tweet-ui:3.0.0'
+
     testCompile 'junit:junit:4.12'
 }
 
