--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.2.0'
     compile 'com.google.firebase:firebase-auth:10.2.1'
     compile 'com.google.firebase:firebase-messaging:10.2.1'
+    compile 'com.google.firebase:firebase-crash:10.2.1'
     compile 'com.firebase:firebase-jobdispatcher:0.6.0'
 
     compile 'com.android.support:support-v4:25.3.1'
